# leptos-rs-template

./: .gitignore  .start_server.sh  Cargo.toml  LEPTOS-CSR-README.md  Makefile.toml  README.md  TODO.org
migrations/: 20250211_create_model_table.sql
migrations/postgresql/: 20250226_create_models_table.sql
migrations/sqlite/: 20250226_create_user_table.sql
src/: app.rs  auth.rs  example.rs  lib.rs  main.rs  routes.rs
src/pages/: home.rs
