[package]
name = "leptos_template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# Web framework
axum = { version = "0.7.5", optional = true }
http = "1.1"

# Enables dotenv for environment variable management in development
#dotenvy = "0.15"

# Async utilities
futures = "0.3.30"
tokio = { version = "1.39", features = ["full"], optional = true }

# Leptos for SSR
leptos = { version = "0.7", features = ["ssr", "tracing"] }
leptos_axum = { version = "0.7", optional=true }

# Logging and tracing
log = "0.4"
tracing = { version = "0.1", optional = true }

# OAuth2 authentication
oauth2 = { version = "5", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Tower middleware
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["full"], optional = true }

# Database support (SQLx)
sqlx = { version = "0.8.3", features = ["sqlite", "postgres", "runtime-tokio-rustls"], optional = true } # "tls-native-tls"

# Error handling
thiserror = "1.0"
leptos_router = "0.7.7"
leptos_meta = "0.7.7"





[features]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:sqlx",
  "leptos/ssr",
  "dep:leptos_axum",
  "dep:tracing",
]


[profile.release]
opt-level = 3

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "leptos_template"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "./style.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "cargo make test-ui"
end2end-dir = "e2e"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
#lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

